Thu Dec  9 08:54:45 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* thread_pthread.c (get_stack): might also be a backport mistake.
	  attr shall be destroyed anyway.

Thu Dec  9 08:33:17 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* variable.c (FinalVM_generic_iv_tbl): at_exit function shall use
	  rb_vm_specific_ptr_for_specific_vm instead.

Thu Dec  9 07:26:51 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (rb_vm_initialize): this temporary string should be
	  zero-filled to prevent exception by non-ascii garbage.

Thu Dec  9 07:18:53 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (vm_data_type): might be a merge miss.  dfree shall be specified.

Thu Dec  9 07:02:05 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (InitVM_VM): rb_class_new creates a m_tbl, but a T_ICLASS
	  normally do not have one, so obj_free will leak it.  It is
	  unused anyway.

Thu Dec  9 06:46:13 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_vmptr_destruct): vm->loading_table shall be freed.
	  On a normal run a vm->loading_table is empty, but I'm not sure
	  if it is always, so deleting its internals just for sure.

Thu Dec  9 06:26:07 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_vmptr_destruct): vm->unlinked_method_entry_list shall
	  be sweeped.

Thu Dec  9 06:17:52 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_vmptr_destruct): FinalVM_generic_iv_tbl needs (yet
	  another) special care.  When an objspace terminates it nees be.

Thu Dec  9 05:39:32 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* gc.c (rb_objspace_free): deferred finalizers shall be called here.

Thu Dec  9 04:55:10 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* variable.c (InitVM_global_iv_tbl): Well, prior to this change
	  rb_generic_iv_tbl was created using Data_Wrap_Struct, but this
	  was wrong, because that needs an object allocation, an object
	  allocation needs GC, and GC needs rb_generic_iv_tbl itself.
