@@ -1,3 +1,8 @@
+Fri Dec 10 18:56:07 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
+
+	* vm.c (ruby_vmptr_destruct): current thread not always vm->main.
+	  What we should avoid terminatiing is the current one.
+
 Thu Dec  9 08:54:45 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
 
 	* thread_pthread.c (get_stack): might also be a backport mistake.
